Fixed hashtag map base layer, small typo

--- a/stats/templates/stats/hashtag_map.html
+++ b/stats/templates/stats/hashtag_map.html
@@ -41,7 +41,7 @@
         -->
         <div class="container">
             <h2>Mosquito Alert - Hashtag map</h2>
-            <h4 class="call_to_action">Type a hashtag in the input below and click 'Search #hashtag'. Up to 200 of the most recent observations containing the hashmap will be shown on the map.</h4>
+            <h4 class="call_to_action">Type a hashtag in the input below and click 'Search #hashtag'. Up to 200 of the most recent observations containing the hashtag will be shown on the map.</h4>
         </div>
         <div class="container">
             <div class="row">
