Fiddling with null values of ia

--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -292,7 +292,7 @@
                 {{ form.not_sure }}
             </div>
             <div data-id="{{ form.instance.version_UUID }}" class="ia_val {{form.instance.type}}" style="">
-                <label><b>IA Value: {{ form.instance.ia_filter_1|floatformat:4 }}</b></label>
+                <label style="color:white;"><b>IA Value: {{ form.instance.ia_filter_1|floatformat:4 }}</b></label>
             </div>
             <div id="ia{{ form.instance.version_UUID }}" data-ia-value="{{ form.instance.ia_filter_1 }}" data-id="{{ form.instance.version_UUID }}" class="ia_graph {{form.instance.type}}" style="">
             </div>
