--- a/rfrontend/static/css/index.css
+++ b/rfrontend/static/css/index.css
@@ -1,7 +1,15 @@
-[type='radio'] {
-    display: none; 
-}
-
 .nav-item button.btn {
-    margin: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+}  
+.login-form {
+    width: 400px;
+    margin: auto;
+    background-color: white;
+    padding: 2rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 20px;
+}  
+.list-container {
+    display: flex;
 }
