--- a/tigaserver_app/templates/swagger.html
+++ b/tigaserver_app/templates/swagger.html
@@ -19,7 +19,11 @@
           SwaggerUIBundle.presets.apis,
           SwaggerUIBundle.SwaggerUIStandalonePreset
         ],
-        layout: "BaseLayout"
+        layout: "BaseLayout",
+        requestInterceptor: (request) => {
+          request.headers['X-CSRFToken'] = "{{ csrf_token }}"
+          return request;
+        }
       })
     </script>
   </body>
