--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -974,7 +974,7 @@
                         The following reports have been marked as validated, but either:</p>
                         <ul>
                             <li> - you haven't chosen any value from the 'Species certainty' dropbox.</li>
-                            <li> - you have chosen 'Unclassified' from the 'Species certainty' dropbox and made the report status 'public'.</li>
+                            <li> - you have chosen 'Off-topic' from the 'Species certainty' dropbox and made the report status 'public'.</li>
                             <li> - you have flagged the report without internal comment (unexplained flag)</li>
                             <li> - you have hidden the report without internal comment (unexplained hidden)</li>
                             <li> - it's a full report and you have not chosen a public note</li>
