Working prototype, testing

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -2169,7 +2169,7 @@
                                 }
                             }
                         }
-                        if(button_title == 'Unclassified' && checked){
+                        if(button_title == 'Off-topic' && checked){
                             unclassified = true;
                         }
                         //flagged
@@ -2185,7 +2185,7 @@
                             }
                         }
                         //public
-                        if(status == '1' && checked && button_title == 'Unclassified'){
+                        if(status == '1' && checked && button_title == 'Off-topic'){
                             public_unclassified = true;
                         }
                     }
