Removed 'who tagged' for normal experts, kept for superexpert

--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -172,7 +172,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <strong>Tags </strong> {{ form.instance.report.get_tags_bootstrap | safe }}
+            <strong>Tags </strong> {{ form.instance.report.get_tags_bootstrap_superexpert | safe }}
         </div>
     </div>
 {% endblock %}
