Enabled female mosquito blood ui

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -814,7 +814,7 @@
                     $('[id^=blood_status_' + '{{ form.instance.report.version_UUID }}' + '_]').hide();
                     // this function is defined in blood_switch.js
                     /* TODO - uncomment this when activating blood + female */
-                    /* reset_all_picture_status_for_report('{{ form.instance.report.version_UUID }}'); */
+                    reset_all_picture_status_for_report('{{ form.instance.report.version_UUID }}');
                 });
 
 
