Fixed checked var not found

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -1921,6 +1921,7 @@
     <script>
 
         var pending = "{{ pending }}";
+        var checked = "{{ checked }}";
 
         var scroll_position = parseInt({{ scroll_position }});
         if (scroll_position != null && !isNaN(scroll_position) && isFinite(scroll_position)) {
