--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -79,6 +79,12 @@
             display: inline-block;
         }
 
+        .rb_display_this_photo {
+            padding-top: 20px;
+            margin-top: 10px;
+            border-top: 1px solid #ccc !important;
+        }
+
     </style>
 
     {% block fa_css %}
