Modified survey sending

--- a/tigacrafting/templates/tigacrafting/survey_2023/survey_el.html
+++ b/tigacrafting/templates/tigacrafting/survey_2023/survey_el.html
@@ -5,7 +5,10 @@
     <title>έρευνα</title>
 </head>
 <body>
-    <h1>Θέλετε να μας βοηθήσετε;</h1>
+    <h1>{{ title }}</h1>
+    <p>
+        {{ message }}
+    </p>
     <p>
         Ψάχνουμε συνεχώς τρόπους για να βελτιώσουμε και να προσεγγίσουμε με κατάλληλο τρόπο πολίτες- επιστήμονες που
         ενδιαφέρονται να μελετήσουν και να παρακολουθήσουν κουνούπια. Αναπτύξαμε αυτή τη σύντομη <a href="{{ survey_link }}" target="_blank">έρευνα</a> και θα
