--- a/tigacrafting/templates/tigacrafting/survey_2023/survey_en.html
+++ b/tigacrafting/templates/tigacrafting/survey_2023/survey_en.html
@@ -5,7 +5,10 @@
     <title>Survey</title>
 </head>
 <body>
-    <h1>Want to help us?</h1>
+    <h1>{{ title }}</h1>
+    <p>
+        {{ message }}
+    </p>
     <p>
         We’re always researching ways to improve and better reach citizen scientists interested in studying and
         monitoring mosquitoes. We’ve developed this short <a href="{{ survey_link }}" target="_blank">survey</a> and we’d be glad to
