--- a/tigacrafting/templates/tigacrafting/survey_2023/survey_es.html
+++ b/tigacrafting/templates/tigacrafting/survey_2023/survey_es.html
@@ -5,7 +5,10 @@
     <title>Encuesta</title>
 </head>
 <body>
-    <h1>¿Quieres ayudarnos?</h1>
+    <h1>{{ title }}</h1>
+    <p>
+        {{ message }}
+    </p>
     <p>
         Con el inter&eacute;s de mejorar el proyecto, hemos desarrollado esta breve <a href="{{ survey_link }}" target="_blank">encuesta</a>
         de menos de cinco minutos. Nos encantar&iacute;a poder contar con tu opini&oacute;n. Tus respuestas nos
