--- a/tigacrafting/templates/tigacrafting/survey_2023/survey_it.html
+++ b/tigacrafting/templates/tigacrafting/survey_2023/survey_it.html
@@ -5,7 +5,10 @@
     <title>Questionario</title>
 </head>
 <body>
-    <h1>Vuoi aiutarci?</h1>
+    <h1>{{ title }}</h1>
+    <p>
+        {{ message }}
+    </p>
     <p>
         Siamo alla ricerca continua di metodi per raggiungere in modo efficace i cittadini-scienziati interessati a
         studiare e monitorare le zanzare. Abbiamo sviluppato un breve <a href="{{ survey_link }}" target="_blank">questionario</a> e saremmo onorati di ricevere
