--- a/tigacrafting/templates/tigacrafting/survey_2023/survey_nl.html
+++ b/tigacrafting/templates/tigacrafting/survey_2023/survey_nl.html
@@ -5,7 +5,10 @@
     <title>Enquête</title>
 </head>
 <body>
-    <h1>Wil je ons helpen?</h1>
+    <h1>{{ title }}</h1>
+    <p>
+        {{ message }}
+    </p>
     <p>
         We zijn op zoek naar "citizen scientists" die geïnteresseerd zijn in het bestuderen en monitoren van muggen. We
         hebben deze korte <a href="{{ survey_link }}" target="_blank">enquête</a> ontwikkeld. Jouw participatie zou ons enorm helpen; we hebben maar 5 minuten
