--- a/tigacrafting/templates/tigacrafting/survey_2023/survey_ca.html
+++ b/tigacrafting/templates/tigacrafting/survey_2023/survey_ca.html
@@ -5,7 +5,10 @@
     <title>Enquesta</title>
 </head>
 <body>
-    <h1>Ens vols donar un cop de mà?</h1>
+    <h1>{{ title }}</h1>
+    <p>
+        {{ message }}
+    </p>
     <p>
         Amb l'inter&egrave;s de millorar el projecte, hem desenvolupat aquesta breu <a href="{{ survey_link }} target="_blank">enquesta</a>
         de menys de cinc minuts. Ens encantaria poder comptar amb la teva opini&oacute;. Les teves respostes ens ajudaran a
