--- a/mosquito_alert/templates/users/user_form.html
+++ b/mosquito_alert/templates/users/user_form.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
+
 {% load crispy_forms_tags %}
 
-{% block title %}{{ user.username }}{% endblock %}
-
+{% block title %}
+  {{ user.username }}
+{% endblock title %}
 {% block content %}
   <h1>{{ user.username }}</h1>
-  <form class="form-horizontal" method="post" action="{% url 'users:update' %}">
+  <form class="form-horizontal"
+        method="post"
+        action="{% url 'users:update' %}">
     {% csrf_token %}
     {{ form|crispy }}
     <div class="control-group">
@@ -14,4 +18,4 @@
       </div>
     </div>
   </form>
-{% endblock %}
+{% endblock content %}
