--- a/mosquito_alert/reports/templates/admin/polymorphic/objects_history.html
+++ b/mosquito_alert/reports/templates/admin/polymorphic/objects_history.html
@@ -1,6 +1,7 @@
 {% extends 'reversion/object_history.html' %}
+
 {% load polymorphic_admin_tags %}
 
 {% block breadcrumbs %}
-    {% breadcrumb_scope base_opts %}{{ block.super }}{% endbreadcrumb_scope %}
-{% endblock %}
+  {% breadcrumb_scope base_opts %}{{ block.super }}{% endbreadcrumb_scope %}
+{% endblock breadcrumbs %}
