Remove duplicated "Alert"

--- a/tigahelp/templates/tigahelp/about_us_bg.html
+++ b/tigahelp/templates/tigahelp/about_us_bg.html
@@ -8,7 +8,7 @@ About Us
 {% block content %}
 
 <h2>Координиращи организации</h2>
-<p>Mosquito Alert Alert се ръководи от следните публични изследователски институции: <em>Център за разширени проучвания
+<p>Mosquito Alert се ръководи от следните публични изследователски институции: <em>Център за разширени проучвания
     на Бланес на Испанския национален изследователски съвет</em> (<strong>CEAB-CSIC</strong>), <em>Център за екологични
     изследвания и приложения в горското стопанство</em> (<strong>CREAF</strong>) и <em>Университет Помпеу Фабра</em>
     (<strong>UPF</strong>). Участва и <em>Каталунският институт за изследвания и разширени проучвания</em> (<strong>ICREA</strong>).
